# pit-marmitron

./: README.md
Computacional/app/: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  estrutura_essencial.txt  restart-containers.sh
Computacional/app/database/: 001_extensions.up.sql  010_users.up.sql  020_restaurants.up.sql  030_products.up.sql  040_orders.up.sql  050_order_items.up.sql  060_telemetry.up.sql  070_delivery_points.up.sql  080_navigation_routes.up.sql  README.md
Computacional/app/docs/: ARCHITECTURE.md  CAMERA_STREAMING.md  CONVENTIONS.md  DELIVERY_POINTS.md  DEMONSTRATION_QUICKSTART.md  PROTOCOL.md  (+10 more)
Computacional/nodes wrapper orbslam3_ros2 modificados/: README.md
Computacional/robot/ros_ws/src/autonomous_drive/: CMakeLists.txt  package.xml
Computacional/robot/ros_ws/src/autonomous_drive/configs/: config.rviz  ekf_map.yaml  ekf_odom.yaml  mapper_params_online_async.yaml  nav2_params.yaml
Computacional/robot/ros_ws/src/autonomous_drive/description/: gps.xacro  imu.xacro  inertials.xacro  lidar.xacro  marmitron_base.urdf.xacro  marmitron_base_sim.urdf.xacro  materials.xacro  robot_controller.xacro  robot_design.xacro  ultrasound.xacro
Computacional/robot/ros_ws/src/autonomous_drive/launch/: full_launch.launch.py  rsp.launch.py  setup.launch.py  sim.launch.py
Computacional/robot/ros_ws/src/autonomous_drive/src/: calculo_vel_rodas.cpp  gps.cpp  mux2.cpp  pos_to_lat_sim.cpp
Computacional/robot/ros_ws/src/autonomous_drive/worlds/: world.sdf
release/: README.md
(+240 files in other folders)
